  to create a new session for the user. As long as the file exists continuously,
  the lock kicks in and concurrent requests serialize appropriately.

* New universal "hide" attribute.  You can now set the attribute hide=1 for any
  tag to suppress its output.  For example [calcn hide=1]$foo='bar'[/calcn] will
  still set $foo to bar, but won't output bar from the tag itself.

UserTag
-------

* Added scratch option to [get-url] for saving binary content into a scratch
  variable instead of returning it.

Payment
-------

* Removed inoperative WellsFargo payment module.

Jobs
----

* Force email notification of errors, can be prevented with ignore_errors
  setting.

UI
--

* Matrix options editor can now display more than 50 variants via the use of a
  more-list.

* Fix sort order of generated variant codes so that they match the code that is
  ordered from the flypage.

* You can now mark individual options to be treated as "simple options" even
  though the product is set to Matrix options.  This is useful if you have one
  or more options that you don't wish to track for inventory purposes or if you
  want to use a text or textarea widget (which is not possible with matrix
  options).  Requires the addition of an o_simple column to the options table
  for existing catalogs.

* New [widget-info] UI tag.

* Option editor will now correctly generate variants for options that use
  widgets capable of multiple selections (ie, multiple or checkout widgets).


Interchange 5.5.1 released on 2007-08-21.

Core
----

* Removed odd formatting from --add entry in interchange manual page.

* Fixed a DoS exploit. A carefully crafted HTTP POST request could cause
  an Interchange page processor to hang until it's killed by Interchange's
  periodic housekeeping routine. If several of these requests are received
  in quick succession then it could be possible to disable all of the page
  processors, rendering Interchange unresponsive for a while. Fixed by