@@ -80,6 +80,9 @@ Core
   tag to suppress its output.  For example [calcn hide=1]$foo='bar'[/calcn] will
   still set $foo to bar, but won't output bar from the tag itself.
 
+* Recognize "cc" and "bcc" headers in Route settings for emails generated 
+  directly by the routes.
+
 UserTag
 -------
 
